fix missing padding-right on style=day

--- a/src/pretix/static/pretixpresale/scss/widget.scss
+++ b/src/pretix/static/pretixpresale/scss/widget.scss
@@ -541,7 +541,7 @@
       box-sizing: border-box;
       span {
         display: inline;
-        padding: 2px 6px 3px;
+        padding: 4px 1.25em 3px 6px;
         font-size: 75%;
         font-weight: bold;
         line-height: 1;
